v2/hostnamej-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hostnamej-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostnamej
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hostnamej
        version: v2
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/istio-v2:latest
        imagePullPolicy: Always
        name: hostnamej
        resources: {}
      restartPolicy: Always
