v2/hostnamej-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hostnamej
spec:
  hosts:
  - "hostnamej.example.com"
  gateways:
  - hostnamej-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hostnamej
        subset: v1
      weight: 50
    - destination:
        host: hostnamej
        subset: v2
      weight: 50
